# flite

./: .gitignore  LICENSE  MANIFEST.in  README.md  commands.md  pyproject.toml  pytest.ini  run_tests.py  setup.py
.github/workflows/: test.yml
flite/: __init__.py  __main__.py  cli.py  colors.py  generator.py  simple_interactive.py  utils.py
tests/: README.md  __init__.py  requirements.txt  test_base.py  test_cli.py  test_colors.py  test_generator.py  test_interactive.py  test_utils.py
