[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flite"
version = "1.0.1"
description = "A CLI tool to generate Flask projects automatically"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Artbyo3", email = "artbyo3@examplenotarealemailaddress.com"}
]
keywords = ["flask", "cli", "generator", "web", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "colorama>=0.4.4",
    "pyyaml>=6.0",
]

[project.scripts]
flite = "flite.cli:main"

[project.urls]
Homepage = "https://github.com/artbyo3/flite"
Repository = "https://github.com/artbyo3/flite"
Issues = "https://github.com/artbyo3/flite/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["flite*"]

[tool.setuptools.package-data]
flite = ["templates/*"]
